@@ -1,75 +1,69 @@
 package es.daw.backend.service;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
+import java.util.HashMap;
 import java.util.Map;
 
 @Service
+@RequiredArgsConstructor
 public class RecaptchaService {
-    @Value("${recaptcha.project-id}")
+
+    @Value("${google.recaptcha.api-key}")
+    private String apiKey;
+
+    @Value("${google.recaptcha.project-id}")
     private String projectId;
 
-    @Value("${recaptcha.secret-key}")
-    private String secretKey;
-
-    @Value("${recaptcha.site-key}")
+    @Value("${google.recaptcha.site-key}")
     private String siteKey;
 
-    private final RestTemplate restTemplate = new RestTemplate();
-
-    // public boolean validateToken(String token) {
-    // if (token == null || token.isEmpty())
-    // return false;
-
-    // String url = "https://www.google.com/recaptcha/api/siteverify"
-    // + "?secret=" + secretKey
-    // + "&response=" + token;
-
-    // try {
-    // ResponseEntity<Map> response = restTemplate.postForEntity(url, null,
-    // Map.class);
-    // Map body = response.getBody();
-    // System.out.println("Respuesta reCAPTCHA: " + body);
-    // return Boolean.TRUE.equals(body.get("success"));
-    // } catch (Exception e) {
-    // System.err.println("Error validando reCAPTCHA: " + e.getMessage());
-    // return false;
-    // }
-    // }
-
     public boolean validateToken(String token) {
-        if (token == null || token.isEmpty())
+        // Si no hay token o usamos un token de bypass local temporal
+        if (token == null || token.isEmpty()) {
             return false;
+        }
 
-        String url = "https://recaptchaenterprise.googleapis.com/v1/projects/"
-                + projectId + "/assessments?key=" + secretKey; // secretKey = AIzaSy...
+        RestTemplate restTemplate = new RestTemplate();
 
-        String payload = """
-                {
-                    "event": {
-                        "token": "%s",
-                        "siteKey": "%s"
-                    }
-                }
-                """.formatted(token, siteKey);
+        // 1. Construir la URL de reCAPTCHA Enterprise
+        String url = String.format("https://recaptchaenterprise.googleapis.com/v1/projects/%s/assessments?key=%s", projectId, apiKey);
+
+        // 2. Preparar las cabeceras
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+
+        // 3. Construir el cuerpo de la petición (JSON)
+        Map<String, Object> event = new HashMap<>();
+        event.put("token", token);
+        event.put("siteKey", siteKey);
+        event.put("expectedAction", "REGISTER"); // Nombre de la acción que realiza el usuario
+
+        Map<String, Object> body = new HashMap<>();
+        body.put("event", event);
+
+        HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(body, headers);
 
         try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_JSON);
-            HttpEntity<String> entity = new HttpEntity<>(payload, headers);
-            ResponseEntity<Map> response = restTemplate.postForEntity(url, entity, Map.class);
+            // 4. Hacer la petición POST a Google Cloud
+            Map<String, Object> response = restTemplate.postForObject(url, requestEntity, Map.class);
 
-            Map body = response.getBody();
-            System.out.println("Respuesta reCAPTCHA Enterprise: " + body);
-
-            Map tokenProps = (Map) body.get("tokenProperties");
-            return tokenProps != null && Boolean.TRUE.equals(tokenProps.get("valid"));
-
-        } catch (Exception e) {
-            System.err.println("Error validando reCAPTCHA: " + e.getMessage());
+            // 5. Analizar la respuesta de Enterprise
+            if (response != null && response.containsKey("tokenProperties")) {
+                Map<String, Object> tokenProperties = (Map<String, Object>) response.get("tokenProperties");
+                Boolean isValid = (Boolean) tokenProperties.get("valid");
+                return isValid != null && isValid;
+            }
             return false;
+        } catch (Exception e) {
+            System.err.println("Error de conexión con reCAPTCHA Enterprise: " + e.getMessage());
+            return false; // Si falla la conexión, por seguridad denegamos el registro
         }
     }
 }
